# cmake-cross-compiling-tutorial

./: CMakeLists.txt  CrossCompile.cmake  LICENSE  README.md
src/: helloworld.c
src/app/: CMakeLists.txt  helloworld.c
src/sharedlib/: CMakeLists.txt  MyLibConfig.cmake.in  mylib.c  mylib.h
